{{$NEXT}}

0.98     2018-06-09

- More tweaks to the CONTRIBUTING.md file.


0.97     2018-06-09

- Fixed a small issue in the generated CONTRIBUTING.md file for distros.


0.96     2018-06-09

- Work around a bug in MakeMaker::Awesome that causes it to not include code
  in the Makefile.PL to indicate the minimum required version of Perl when one
  exists. See
  https://github.com/avar/dist-zilla-plugin-makemaker-awesome/pull/9 for more
  details.


0.95     2018-05-27

- Require version 0.45 of the GitHub plugins and always authenticate when
  getting repo metadata.


0.94     2018-05-26

- Fix my broken code.


0.93     2018-05-26

- Make it possible to only add the compiler warning flags with a minimum Perl
  version. Some modules I maintain will not compile warning-free on older
  Perls because of warnings from the Perl core headers.


0.92     2018-05-26

- Require Devel::PPPort 3.42. The included in the core with older perl
  versions leads to warnings when compiling XS code with newer Perls.


0.91     2018-05-26

- The generated Makefile.PL for XS modules will add "-Wall" and "-Werror" as
  a compiler flags when AUTHOR_TESTING is true.


0.90     2018-05-13

- Added some hackish plugins to make tests run in parallel by default,
  including during the release phase.


0.89     2017-12-24

- The generated perlcriticrc now does a better job of selecting themes.


0.88     2017-11-21

- Removed the MinimumPerl plugin. It scans all sorts of non-perl files (like
  html) and comes up with bogus minimum versions because of that.


0.87     2017-11-18

- Add a has_xs configuration option. Normally this is determined by looking
  for XS files in the distro, but I have a new distro where I need to set this
  explicitly.


0.86     2017-11-12

- Added the MinimumPerl plugin.


0.85     2017-03-14

- Add Code::TidyAll::Plugin::SortLines::Naturally to develop prereqs for
  modules which use this bundle.


0.84     2017-03-14
