@@ -298,6 +298,7 @@ sub _build_plugins {
         # README.md generation needs to come after pod weaving
         $self->_readme_md_plugin,
         $self->_contributing_md_plugin,
+        $self->_code_of_conduct_plugin,
         'InstallGuide',
         'CPANFile',
         $self->_maybe_ppport_plugin,
@@ -398,6 +399,7 @@ sub _build_files_to_copy_from_build {
     my $self = shift;
 
     my @files = qw(
+        CODE_OF_CONDUCT.md
         CONTRIBUTING.md
         LICENSE
         README.md
@@ -715,6 +717,18 @@ sub _contributing_md_plugin {
     ];
 }
 
+sub _code_of_conduct_plugin {
+    my $self = shift;
+
+    return [
+        'GenerateFile::FromShareDir' => 'Generate CODE_OF_CONDUCT.md' => {
+            -dist     => ( __PACKAGE__ =~ s/::/-/gr ),
+            -filename => 'CODE_OF_CONDUCT.md',
+            has_xs    => $self->has_xs,
+        },
+    ];
+}
+
 sub _maybe_ppport_plugin {
     my $self = shift;
 
@@ -905,6 +919,7 @@ This is more or less equivalent to the following F<dist.ini>:
 
     [CopyFilesFromBuild]
     copy = Build.PL
+    copy = CODE_OF_CONDUCT.md
     copy = CONTRIBUTING.md
     copy = LICENSE
     copy = Makefile.PL
@@ -1040,6 +1055,10 @@ This is more or less equivalent to the following F<dist.ini>:
     ; This is determined by looking through the distro for .xs files.
     has_xs    = ...
 
+    [GenerateFile::FromShareDir / Generate CODE_OF_CONDUCT.md]
+    -dist     = Dist-Zilla-PluginBundle-DROLSKY
+    -filename = CODE_OF_CONDUCT.md
+
     [InstallGuide]
     [CPANFile]
 
@@ -1067,6 +1086,7 @@ This is more or less equivalent to the following F<dist.ini>:
     ; The allow_dirty list is basically all of the generated or munged files
     ; in the distro, including:
     ;     Build.PL
+    ;     CODE_OF_CONDUCT.md
     ;     CONTRIBUTING.md
     ;     Changes
     ;     LICENSE
