@@ -1,5 +1,10 @@
 {{$NEXT}}
 
+- Add a plugin to generate a CODE_OF_CONDUCT.md and copy this into the repo
+  after release. The text is from
+  https://www.contributor-covenant.org/version/1/4/code-of-conduct.html.
+
+
 0.98     2018-06-09
 
 - More tweaks to the CONTRIBUTING.md file.
